--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<body class="container" >
+		<div Hello World </div>
 		<div class="header" >
 			<video autoplay muted loop id="myVideo">
 	            <source src="video/rolexVideo.mp4" type="video/mp4">
